--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>dialog demo</title>
   <meta charset="utf-8">
-  <script src="http://apps.bdimg.com/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script src="index.js"></script>
 <style>
 
 .dialog .dialog-overlay {
