--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>dialog demo</title>
   <meta charset="utf-8">
-  <script src="Modal_components/index.js"></script>
+  <script src="/Modal_components/index.js"></script>
 <style>
 
 .dialog .dialog-overlay {
